--- a/test/bucket.yml
+++ b/test/bucket.yml
@@ -1,6 +1,6 @@
 flows:
-  8014aea2-b700-4fc5-a3cf-66e6b88f344c: {ver: 1, file: IX.2.2.15_38.snapshot, comments: '',
-    author: anonymous, created: 1768590919415, flowName: IX.2.2.15/38, flowDesc: ''}
+  8014aea2-b700-4fc5-a3cf-66e6b88f344c: {ver: 2, file: IX.2.2.15_38.snapshot, comments: version
+      2, author: anonymous, created: 1768591031208, flowName: IX.2.2.15/38, flowDesc: ''}
   f76ea5d6-5118-46de-96d0-0c5e7011a0b6: {ver: 1, file: IX.1.2.4.snapshot, comments: '',
     author: anonymous, created: 1768590959496, flowName: IX.1.2.4, flowDesc: ''}
 layoutVer: 1
