By NiFi Registry user: anonymous

--- a/new/bucket.yml
+++ b/new/bucket.yml
@@ -1,5 +1,7 @@
 flows:
   5628df5a-2df2-4139-a01a-5bb0ca1f6e11: {ver: 1, file: 2.2.15.snapshot, comments: '',
     author: anonymous, created: 1768732812206, flowName: 2.2.15, flowDesc: ''}
+  daceb97b-9aad-4555-9c1f-ee91139658ee: {ver: 1, file: 1.2.4.snapshot, comments: '',
+    author: anonymous, created: 1768732840926, flowName: 1.2.4, flowDesc: ''}
 layoutVer: 1
 bucketId: 63904a7d-793a-463e-9cce-deb32a3899d5
